text behind menu extra fix

--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,4 @@
-.sample-two {
+.sample-two, .featurette-total, {
     position: relative;
     float: right;
     margin-top: 50px;
